--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -19,6 +19,58 @@
             <span class="pc-micon"><i class="ti ti-dashboard"></i></span>
             <span class="pc-mtext">儀表板</span></a>
         </li>
+        <li class="pc-item pc-caption">
+          <label>個人資產</label>
+          <i class="ti ti-news"></i>
+        </li>
+        <li class="pc-item pc-hasmenu">
+          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-building-bank"></i></span><span
+                  class="pc-mtext">流動資金</span><span class="pc-arrow"><i class="ti ti-chevron-right"></i></span></a>
+          <ul class="pc-submenu">
+            <li class="pc-item"><a class="pc-link" href="{{ url_for('home_blueprint.assets') }}">現金</a></li>
+            <li class="pc-item"><a class="pc-link" href="">銀行</a></li>
+            <li class="pc-item"><a class="pc-link" href="">電子錢包</a></li>
+            <li class="pc-item"><a class="pc-link" href="">其他流動資金</a></li>
+          </ul>
+        </li>
+        <li class="pc-item pc-hasmenu">
+          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-chart-line"></i></span><span
+                  class="pc-mtext">投資</span><span class="pc-arrow"><i class="ti ti-chevron-right"></i></span></a>
+          <ul class="pc-submenu">
+            <li class="pc-item"><a class="pc-link" href="">基金</a></li>
+            <li class="pc-item"><a class="pc-link" href="">股票</a></li>
+            <li class="pc-item"><a class="pc-link" href="">加密貨幣</a></li>
+            <li class="pc-item"><a class="pc-link" href="">貴金屬</a></li>
+            <li class="pc-item"><a class="pc-link" href="">其他投資</a></li>
+          </ul>
+        </li>
+        <li class="pc-item pc-hasmenu">
+          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-home"></i></span><span
+                  class="pc-mtext">固定資產</span><span class="pc-arrow"><i class="ti ti-chevron-right"></i></span></a>
+          <ul class="pc-submenu">
+            <li class="pc-item"><a class="pc-link" href="">房產</a></li>
+            <li class="pc-item"><a class="pc-link" href="">汽車</a></li>
+            <li class="pc-item"><a class="pc-link" href="">其他固定資產</a></li>
+          </ul>
+        </li>
+        <li class="pc-item pc-hasmenu">
+          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-coin"></i></span><span
+                  class="pc-mtext">應收款</span><span class="pc-arrow"><i class="ti ti-chevron-right"></i></span></a>
+          <ul class="pc-submenu">
+            <li class="pc-item"><a class="pc-link" href="">應收款</a></li>
+          </ul>
+        </li>
+        <li class="pc-item pc-hasmenu">
+          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-credit-card"></i></span><span
+                  class="pc-mtext">負債</span><span class="pc-arrow"><i class="ti ti-chevron-right"></i></span></a>
+          <ul class="pc-submenu">
+            <li class="pc-item"><a class="pc-link" href="">信用卡</a></li>
+            <li class="pc-item"><a class="pc-link" href="">貸款</a></li>
+            <li class="pc-item"><a class="pc-link" href="">應付款</a></li>
+            <li class="pc-item"><a class="pc-link" href="">其他負債</a></li>
+          </ul>
+        </li>
+
 
         <li class="pc-item pc-caption">
           <label>Pages</label>
